--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "bcrypt": "^4.0.1",
         "express": "^4.17.1",
+        "express-fileupload": "^1.1.7-alpha.3",
         "google-auth-library": "^6.0.0",
         "jsonwebtoken": "^8.5.1",
         "mongoclient": "^1.0.3",
@@ -22,6 +23,6 @@
         "underscore": "^1.10.2"
     },
     "devDependencies": {
-        "nodemon": "^2.0.3"
+        "nodemon": "^2.0.4"
     }
 }
